--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,11 @@
     <body>
         <div id="corpo-externo">
             <div id="corpo-interno-um">
-                <input id="entrada-um" type="text" value="Adicione o ISBN"/>
-                <button id="btn-entrada-um"type="button">Adicionar</button>
+                <input id="input-pagina-um" type="text" value="Adicione o ISBN"/>
+                <button id="btnAdicionar-pagina-um" type="button" onclick='adicionarISBN()'>Adicionar</button>
+                <div id="list-isbn">
+
+                </div>
             </div>
         </div>
     </body>
@@ -16,18 +19,47 @@
 
 <script>
 
-    function clickInput() {  
-        let input = document.getElementById("entrada-um"); 
+    function adicionarISBN(){
+        let input = document.getElementById("input-pagina-um");
+        if (isRepetido(input.value) == input.value) {
+            alert(`'${input.value}' FOI INSERIDO, ADICIONE O PRÓXIMO!`);
+            input.value = 'Adicione o ISBN';
+        } else if (!(input.value == "" || input.value == 'Adicione o ISBN')) {
+            let isbn = document.createElement("div");    
+                isbn.setAttribute("id", input.value);
+                isbn.setAttribute("class", 'box-isbn');
+                document.getElementById("list-isbn").prepend(isbn);
+                document.getElementById(input.value).innerText  = input.value;
+                input.value = 'Adicione o ISBN';
+        }
+
+        function isRepetido(valor) {
+            let filhos = document.getElementById("list-isbn").children;
+            return Object.entries(filhos).map((elem, index) => filhos.item(index).innerText).filter((elem) => elem == valor);
+        }
+    }
+
+    function clickDescliqueInput() {
+        let btnAdicionar = document.getElementById("btnAdicionar-pagina-um");
+        let input = document.getElementById("input-pagina-um"); 
         input.addEventListener("click", function(event) {
             input.value = "";
         });
-        document.addEventListener('click', function(event) {         // copiei esse codigo, não entendo muito bem como esse
-            let isClickInsideElement = input.contains(event.target); // contains(event.target) funciona
-            if (!isClickInsideElement && input.value == "") {
+        
+        // Não entendo muito bem como esse contains(event.target) funciona
+        document.addEventListener('click', function(event) {              
+            let isClickInsideElementInput = input.contains(event.target); 
+            let isClickInsideElementBtnAdicionar = btnAdicionar.contains(event.target)
+            if (!isClickInsideElementInput && !isClickInsideElementBtnAdicionar && input.value == "Adicione o ISBN") {
                 input.value = "Adicione o ISBN";
-            } 
+            } else if (!isClickInsideElementInput && !isClickInsideElementBtnAdicionar && input.value == "") {
+                input.value = "Adicione o ISBN";
+            } else if (isClickInsideElementBtnAdicionar && input.value == "") {
+                input.value = "Adicione o ISBN";
+            }
         });
     }
-    window.addEventListener("load", clickInput);
+
+    window.addEventListener("load", clickDescliqueInput);
 
 </script>
